[metadata]
name = libglue-SPLAY-TECHNOLOGY
version = 0.0.1
author = Jasper Poppe
author_email = jgpoppe@gmail.com
description = General Python library with focus on automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpoppe/libglue
project_urls =
    Bug Tracker = https://github.com/jpoppe/libglue/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.10
install_requires =
    pyyaml
    rich
    typer
    psutil
    humanfriendly
    paramiko
    scp
    wasabi

[options.extras_require]
dev =
    debugpy
    pdbr

[pycodestyle]
max-line-length = 120
statistics = True

[pylint.MASTER]
max-line-length = 120
reports = no

# [pylint.MESSAGES CONTROL]
# disable =
#   subprocess-run-check,
#   too-few-public-methods,
#   too-many-ancestors,
#   too-many-arguments,
#   too-many-branches,
#   too-many-locals,
#   too-many-nested-blocks,
#   ungrouped-imports,
#   wrong-import-order,
#   wrong-import-position,

[tool.black]
line-length = 120
experimental-string-processing = true
target-version = ["py310"]
skip-string-normalization = true
